[project]
name = "architecture-overviews"
version = "0.1.0"
description = "MKDocs Material Setup for Architecture Overview site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-awesome-nav>=3.1.1",
    "mkdocs-material>=9.6.9",
    "mkdocs-table-reader-plugin>=3.1.0",
]
